# jarvis

./: .env.example  .gitignore  .impeccable.md  .release-note-overrides.json  AGENTS.md  CLAUDE.md  README.md  SOUL.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  pages.yml  public-readiness.yml  release.yml  smoke.yml
deploy/honcho/: init.sql
deploy/honcho-v3/: docker-compose.v3.yml  init.sql  validate.py
deploy/launchd/: com.jarvis.brain.plist.template  com.jarvis.intercom.plist.template  com.jarvis.worker.plist.template
deploy/litellm/: config.yaml  setup-attribution.sh
deploy/systemd/: jarvis-intercom.service.template
docs/: AGENTIC.md  AGENTIC_WORKER_SESSION_PLAN.md  BRINGUP.md  BROWSER.md  COCKPIT_API.md  COCKPIT_LIFECYCLE.md  COCKPIT_PROJECT_MANAGEMENT.md  CONVERSATION_WORKSPACES.md  CUTOVER.md  DEPLOYMENT.md  DOGFOOD.md  DREAMER_TOMBSTONE_DECISION.md  FLEET.md  HONCHO_MEMORY_MODEL.md  HONCHO_V3_VALIDATION.md  HOUSEHOLD_COMMS.md  MCP_SERVER.md  MCP_SERVE_AUTH.md  MCP_SERVE_COCKPIT_INTEGRATION.md  MEMORY_BACKEND_MARKET_RESEARCH.md  NOTIFICATIONS.md  ORCHESTRATION_CHAT_TREE.md  PHASE2.md  PHASE3.md  PI.md  PUBLIC_RELEASE.md  SWIFT_TOOLBAR_SPEC.md  TESTING.md  VOICE_MODES.md  WORKER_SESSIONS_API.md
docs-site/: index.html  styles.css
docs/modularity-review/2026-06-29/: modularity-review.html  modularity-review.md
docs/modularity-review/2026-07-11/: modularity-review.html  modularity-review.md
jarvis-workspace/: HEARTBEAT.md
jarvis-workspace/profiles/: local-mac.md  room-pi.md  whatsapp.md
jarvis-workspace/skills/: SKILLS.md  morning_news.md  news_briefing.md  train_times.md
jarvis-workspace/users/: jules.md  neil.md
jarvis-workspace/worker/: ping_pong.py  test_ping_pong.py
jarvis-workspace/worker/jobs/: 72be30b34b5c.json  a3fc97f8a404.json  hello-job-1d6287.json  hello-job-226cf1.json  hello-job-2b7103.json  hello-job-4d223e.json  hello-job-74315c.json  (+12 more)
scripts/: check_conventional_commits.sh  check_openai_models.py  compute_next_release_version.sh  generate_release_notes.py  install_commit_hook.sh  install_mac.sh  install_pi.sh  release_runtime.sh  sync_runtime_check_env.sh  sync_runtime_version.sh  uninstall_mac.sh  update_homebrew_formula.sh  verify_public_readiness.sh
src/jarvis/: __init__.py  account_adapters.py  account_router.py  accounts.py  capabilities.py  cli.py  config.py  deploy.py  device_diagnostics.py  dogfood.py  engines.py  fleet.py  frontmatter.py  github_reviews.py  ids.py  jsonl_cache.py  oauth.py  orchestrator_tool_contract.py  redaction.py  review_probe.py  runtime.py  runtime_info.py  scheduling.py  setup.py  storage.py  system_info.py  text.py  users.py  worker_session_contract.py
tests/: conftest.py
tests/integration/: test_browser_click.py  test_browser_iframe.py  test_browser_keys.py  test_browser_live.py  test_gateway.py  test_latency.py  test_loopback.py  test_memory.py  test_stt.py  test_tts.py  test_web_search.py  test_whatsapp_live.py
tests/unit/: conftest.py  mcp_echo_server.py  test_account_router.py  test_accounts.py  test_agency_and_timeout.py  test_alarm_tools.py  test_architecture_boundaries.py  test_auth_bind.py  test_background.py  test_browser.py  test_capabilities.py  test_cli_bringup.py  test_cli_mic.py  test_cli_pairing.py  test_cli_setup.py  test_cli_status.py  test_cockpit_api.py  test_cockpit_connector.py  test_cockpit_worker_reads.py  test_commit_message_checks.py  test_config.py  test_contexts.py  test_conversation_end.py  test_deploy.py  test_dogfood.py  test_embedding_relevance.py  test_endpointer.py  test_fetch.py  test_fleet.py  test_gateway_client.py  test_github_reviews.py  test_google_tools.py  test_heartbeat.py  test_homebrew_formula_release.py  test_identity.py  test_install_mac.py  test_install_pi.py  test_intercom_hardware.py  test_intercom_routing.py  test_intercom_tools.py  (+51 more)
(+139 files in other folders)
