[project]
name = "jarvis"
version = "0.1.16"
description = "Jarvis — all-local voice assistant (Phase 1)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "websockets>=12",          # brain<->intercom WebSocket transport (Phase 3 W4)
]

[project.optional-dependencies]
# Installed incrementally as each build step is reached, so Step 0 stays light.
gateway = [
    "openai>=1.40",            # OpenAI-compatible client -> LiteLLM gateway
]
tts = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
]
stt = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
]
vad = [
    "silero-vad>=5.1",
    "torch>=2.2",
]
vad-lite = [
    "webrtcvad-wheels>=2.0.14",
]
wake = [
    "openwakeword>=0.6",
    "pvporcupine>=3.0",
]
memory = [
    "honcho-ai>=1.5",
]
# The worker Mac daemon — installed ONLY on the worker host, not the brain or an
# intercom (it talks to the brain over HTTP; nothing imports it). Phase 3c.
worker = [
    "aiohttp>=3.9",
]
# MCP bridge (Phase 3 §6) — the native MCP client. Brain-side only; provides the
# stdio + streamable-http transports. Pure-Python, fine on the supported Python range.
mcp = [
    "mcp>=1.2",
]
# Browser lane — a real Chrome driven over CDP via nodriver (no Playwright). Worker
# host only (the brain talks to it over HTTP). Headed + stealthy; needs Chrome.
browser = [
    "nodriver>=0.37",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.uv]
# The Mac fleet installs from Homebrew. Room intercoms install the same runtime
# on Raspberry Pi OS, so the lockfile must resolve for macOS and Linux arm64.
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: real services/hardware/keys; opt-in via --run-integration",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
